<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.centennial.elluis.sanchez_comp304_a3.PaintActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/propertiesLayout">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:onClick="clearCanvas"
        android:id="@+id/btnClear" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thickness"/>

    <Spinner
        android:id="@+id/thicknessSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:entries="@array/thicknessArray"
        android:outlineProvider="background"
        android:prompt="@string/thickness"
        android:spinnerMode="dropdown" />
</LinearLayout>
    <RadioGroup
        android:id="@+id/colorsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/lineColor_string"/>

        <RadioButton
            android:id="@+id/goldColorRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goldColor"
            android:onClick="GoldColorOnClick"
            android:textColor="#a57c1c"
            android:textColorLink="#a57c1c" />

        <RadioButton
            android:id="@+id/blueColorRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blueColor"
            android:onClick="BlueColorOnClick"

            android:textColor="#2186f2"
            android:textColorLink="#2186f2" />

        <RadioButton
            android:id="@+id/whiteColorRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#FFFFFF"
            android:text="@string/whiteColor"
            android:onClick="WhiteColorOnClick"
            android:textColor="@android:color/black"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />
    </RadioGroup>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_keys"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/leftArrowIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:onClick="leftOnClick"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/rightArrowIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:onClick="rightOnClick"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/upArrowIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:onClick="upOnClick"
            android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/downArrowIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:adjustViewBounds="true"
            android:onClick="downOnClick"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/canvasborder"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/ImageViewForDrawing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="20dp"/>
</LinearLayout>
</LinearLayout>
